BlurEffekt im SideController

--- a/PackingUp/Base.lproj/Main.storyboard
+++ b/PackingUp/Base.lproj/Main.storyboard
@@ -267,7 +267,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kjj-YA-XbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="315" y="121"/>
+            <point key="canvasLocation" x="315" y="65"/>
         </scene>
         <!--ProfilVC-->
         <scene sceneID="6mE-lj-7cO">
@@ -391,6 +391,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="rhs-FA-wDC"/>
-        <segue reference="zP8-n2-3UP"/>
+        <segue reference="WgH-uf-1np"/>
     </inferredMetricsTieBreakers>
 </document>
