--- a/PackingUp/Base.lproj/Main.storyboard
+++ b/PackingUp/Base.lproj/Main.storyboard
@@ -169,11 +169,13 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Tq-yP-oWl">
                                 <rect key="frame" x="104" y="100" width="196" height="30"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert"/>
                             </textField>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M97-FC-Nv5">
                                 <rect key="frame" x="127" y="196" width="151" height="102"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kategorie:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="La4-wJ-vWp">
                                 <rect key="frame" x="20" y="236" width="79" height="21"/>
@@ -184,8 +186,9 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vZI-sb-qhE">
                                 <rect key="frame" x="104" y="158" width="71" height="30"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" keyboardAppearance="alert"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -357,7 +360,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="tFV-J5-BqY" kind="custom" identifier="Profil bearbeiten" customClass="SWRevealViewControllerSeguePushController" id="RSB-E0-aOu"/>
+                                    <segue destination="fql-EF-LtG" kind="custom" identifier="Profil bearbeiten" customClass="SWRevealViewControllerSeguePushController" id="RSB-E0-aOu"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Einstellungen" id="Toq-mc-Gxv">
@@ -427,19 +430,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Profil bearbeiten" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vbp-pl-5kQ">
-                                <rect key="frame" x="81" y="137" width="126" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U62-06-qgh">
+                                <rect key="frame" x="90" y="294" width="61" height="112"/>
+                                <state key="normal" title="Female" image="Mädchen_nicht_ausgewählt"/>
+                                <connections>
+                                    <action selector="buttonFemale:" destination="tFV-J5-BqY" eventType="touchUpInside" id="ab7-MI-it9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s2t-MI-s9a">
+                                <rect key="frame" x="170" y="294" width="61" height="112"/>
+                                <state key="normal" title="Male" image="Männchen_nicht_ausgewählt"/>
+                                <connections>
+                                    <action selector="buttonMale:" destination="tFV-J5-BqY" eventType="touchUpInside" id="koh-gz-VDV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vSl-5M-cQC">
+                                <rect key="frame" x="113" y="77" width="95" height="95"/>
+                                <state key="normal" title="Profil" image="jill-profile-round"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Julia Vogt" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ZY-7d-dXO">
+                                <rect key="frame" x="59" y="193" width="203" height="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="julia.vogt@hof-university.de" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HHJ-ye-Uqo">
+                                <rect key="frame" x="59" y="239" width="203" height="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="3KB-4S-zH9">
+                        <barButtonItem key="rightBarButtonItem" title="Speichern" id="RyD-AQ-GDR"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="female" destination="U62-06-qgh" id="5oe-0s-IF8"/>
+                        <outlet property="male" destination="s2t-MI-s9a" id="cUx-ux-SK6"/>
+                        <outlet property="tfEmail" destination="HHJ-ye-Uqo" id="BgF-xr-Fco"/>
+                        <outlet property="tfName" destination="8ZY-7d-dXO" id="9sp-jW-hNz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sHF-Jd-GwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="581" y="-764"/>
+            <point key="canvasLocation" x="1113" y="-764"/>
         </scene>
         <!--Explore ListsVC-->
         <scene sceneID="bHf-YW-yqa">
@@ -585,7 +621,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Qa-r3-ex7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1199" y="-643"/>
+            <point key="canvasLocation" x="1731" y="-643"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Es5-x8-Ccd">
@@ -623,13 +659,34 @@
             </objects>
             <point key="canvasLocation" x="1009" y="89"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="c6M-9O-aTi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fql-EF-LtG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zKP-Fb-E4D">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tFV-J5-BqY" kind="relationship" relationship="rootViewController" id="E69-B0-xCG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3cL-gQ-5kJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="581" y="-764"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Einstellungen" width="44" height="44"/>
         <image name="Entdecken-1" width="44" height="44"/>
         <image name="Logout-1" width="44" height="44"/>
+        <image name="Mädchen_nicht_ausgewählt" width="91" height="167"/>
+        <image name="Männchen_nicht_ausgewählt" width="91" height="167"/>
         <image name="Packliste" width="39" height="34"/>
         <image name="Profil bearbeiten-1" width="44" height="44"/>
+        <image name="jill-profile-round" width="234" height="234"/>
         <image name="login_Screen" width="640" height="1136"/>
         <image name="profil2" width="323" height="168"/>
     </resources>
